k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-management-deploy
  labels:
    app: course-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-management
  template:
    metadata:
      labels:
        app: course-management
    spec:
      containers:
      - name: course-management-service
        image: dinalsenadheera/ctse-assignment-cms:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: course-management-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: "course-management-nlb"
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: course-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
