ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /course-management
        pathType: Prefix
        backend:
          service:
            name: course-management-svc
            port:
              number: 80
